<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="stErrorData" Id="{96f352aa-edac-4a78-8923-400e5615a620}">
    <Declaration><![CDATA[ TYPE stErrorData :
STRUCT
	Status		: UINT;
	ErrorID		: UINT;
	ErrorMsg	: STRING;
	TimeStop	: STRING;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>