<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="stPalletTrackingData" Id="{de6fb078-ce1f-4af6-b52c-752999cd5c66}">
    <Declaration><![CDATA[TYPE stPalletTrackingData :
STRUCT
	PalletID					: STRING;
	CounterProduct				: UINT;
	EANVariant					: STRING;
	CodeVariant					: STRING;
	ProductDescription			: STRING;
	PalletCreationDate			: DATE_AND_TIME;
	BarcodeProduct				: ARRAY [1..60] OF STRING;
	BarcodeProductTime			: ARRAY [1..60] OF DT;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>